# fastapi-tortoise-orm-postgresql

./: .flake8  .gitignore  Dockerfile  docker-compose.yaml  isort.cfg  mypy.ini  pyproject.toml  run.py
app/: dependencies.py  main.py  models.py  schemas.py  settings.py  views.py
app/api/: dependencies.py  user.py
app/core/: models.py
app/helpers/: security.py
app/models/: __init__.py  address.py  article.py  mixins.py  publication.py  user.py
app/note/: crud.py  models.py  schemas.py  views.py
app/repositories/: user.py
app/schemas/: user.py
app/user/: dependencies.py  models.py  schemas.py  views.py
app/user/helpers/: security.py
app/utils/: auth.py
backend/: main.py  settings.py
backend/apps/user/: api.py  dependencies.py  schemas.py
backend/models/: address.py  article.py  base.py  publication.py  user.py
backend/repositories/: user.py
backend/utils/: auth.py
migrations/models/: 0_20231102095939_init.py  0_20231102104300_init.py  0_20231102111927_init.py  0_20231103101654_init.py  1_20231102231547_rename_password.py  1_20240723094412_None.py
tests/: conftest.py  test_user_views.py
